Changed contents and layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Visit Japan | Your Gateway to the Amazing</title>
+        <title>Visit Japan | Your Gateway to the Amazing Asia</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/styles.css">
@@ -177,8 +177,6 @@
                   <a href="#"><i class="fa fa-facebook-square fa-lg" aria-hidden="true"> Facebook </i></a>
                   <a href="#"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"> Twitter </i></a>
                   <a href="#"><i class="fa fa-instagram fa-lg" aria-hidden="true"> Instagram </i></a>
-                  <a href="#"><i class="fa fa-google-plus-square fa-lg" aria-hidden="true"> Google+ </i></a>
-                  <a href="#"><i class="fa fa-youtube-square fa-lg" aria-hidden="true"> YouTube </i></a>
 
               </div>
 
@@ -202,8 +200,6 @@
               <a href="#"><i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i></a>
               <a href="#"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i></a>
               <a href="#"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>
-              <a href="#"><i class="fa fa-google-plus-square fa-lg" aria-hidden="true"></i></a>
-              <a href="#"><i class="fa fa-youtube-square fa-lg" aria-hidden="true"></i></a>
 
           </div>
 
