Updated about.html/table layout

--- a/about.html
+++ b/about.html
@@ -78,46 +78,52 @@
         </header>
 
 
-        <table class="wrapper content">
+        <section class="content">
+            
+            <table class="wrapper">
 
-            <thead>
-                <tr>
-                    <th> Links </th>
-                    <th> Websites </th>
-                    <th> Notes </th>
+                <thead>
+                    <tr>
+                        <th> Links </th>
+                        <th> Websites </th>
+                        <th> Notes </th>
 
-                </tr>
-            </thead>
+                    </tr>
+                </thead>
 
-            <tbody>
-                <tr>
-                    <td>
-                        <a href="https://www.flightnetwork.com"><i class="fa fa-ravelry fa-lg" aria-hidden="true"></i></a>
-                    </td>
-                    <td> Flight Network </td>
-                    <td> The largest Canadian-based online travel company </td>
-                </tr>
+                <tbody>
+                    <tr>
+                        <td>
+                            <a href="https://www.flightnetwork.com"><i class="fa fa-ravelry fa-lg" aria-hidden="true"></i></a>
+                        </td>
+                        <td> Flight Network </td>
+                        <td> The largest Canadian-based online travel company </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <a href="https://www.tripadvisor.ca/CheapFlightsHome"><i class="fa fa-fighter-jet fa-lg" aria-hidden="true"></i></i></a>
-                    </td>
-                    <td> Expedia </td>
-                    <td> An American travel company that operates international global online travel brands </td>
+                    <tr>
+                        <td>
+                            <a href="https://www.tripadvisor.ca/CheapFlightsHome"><i class="fa fa-fighter-jet fa-lg" aria-hidden="true"></i></i></a>
+                        </td>
+                        <td> Expedia </td>
+                        <td> An American travel company that operates international global online travel brands </td>
 
-                </tr>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <a href="https://www.expedia.ca/Flights"><i class="fa fa-plane fa-lg" aria-hidden="true"></i></a>
-                    </td>
-                    <td> Tripadvisor </td>
-                    <td> An American travel and restaurant website company providing hotel and restaurant reviews </td>
-                </tr>
+                    <tr>
+                        <td>
+                            <a href="https://www.expedia.ca/Flights"><i class="fa fa-plane fa-lg" aria-hidden="true"></i></a>
+                        </td>
+                        <td> Tripadvisor </td>
+                        <td> An American travel and restaurant website company providing hotel and restaurant reviews </td>
+                    </tr>
 
-            </tbody>
+                </tbody>
 
-        </table>
+            </table>
+
+        </section>
+
+    
 
         <footer class='footer-container'>
             <div class="head-container">
